[package]
name = "importer-rebike"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = [ "serde"]}
mongodb = {version = "3.4.1", features = ["sync"]}
quick-xml = "0.38.4"
reqwest = {version = "0.12.26", features = ["blocking"]}
serde = "1.0.228"
serde_json = "1.0.145"
