[package]
name = "importer-rebike"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rebike"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = [ "serde"]}
cuid = "1.3.3"
dotenvy = "0.15.7"
mongodb = {version = "3.4.1", features = ["sync"]}
quick-xml = "0.38.4"
regex = "1.12.2"
reqwest = {version = "0.12.26", features = ["blocking"]}
serde = "1.0.228"
serde_json = "1.0.145"
